--- a/Snack1_Bici/index.html
+++ b/Snack1_Bici/index.html
@@ -9,6 +9,22 @@
 </head>
 
 <body>
+    <header></header>
+    <main>
+        <div class="container">
+            <!--  <div>
+                <ul>
+                    <li>
+                        <h3>Bici</h3>
+                    </li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div> -->
+
+        </div>
+    </main>
+    <footer></footer>
     <script src="JavaScript/script.js"></script>
 </body>
 
